Fix nav tabs on mobile

--- a/wp-content/themes/avl/style.css
+++ b/wp-content/themes/avl/style.css
@@ -266,15 +266,17 @@ iframe.goog-te-banner-frame{
 	width: 100%;
 	height: inherit;
 	display: table-cell;
-	opacity: 0.15;
+	opacity: 0.25;
 	position: absolute;
 	background-position: center; z-index: -1;
-	border-bottom: 1px solid black;
+	border-bottom: 2px solid black;
 }
 
 #splash .entry-title,
 .site-title a, .site-description {
 	text-shadow: 1px 1px 0 rgba(0, 0, 0, .2);
+	letter-spacing: 0.065em;
+	font-weight: 425;
 }
 
 #splash.site-branding {
@@ -286,14 +288,15 @@ iframe.goog-te-banner-frame{
 }
 
 #splash .jumbotron {
-	width: 90%;
+	width: 95%;
 	/* border: 2px solid #AAAD00; */
 	background-color: transparent;
 }
 
 .single-avl_department_page #splash h1 {
-	color: #212529;
+	color: #1e0d0de0;
 	margin-top: 0.5em;
+	text-shadow: 1px 1px 0 rgba(0, 0, 0, .3);
 }
 
 #splash .jumbotron p {
@@ -488,6 +491,10 @@ figcaption {
 		/* THIS IS KIND OF HACKY - MM */
 		margin-top: -1em;
 	}
+
+	#splash .nav-tabs .nav-item {
+		margin-top: -0.5em;
+	}
 }
 
 /* Small */
@@ -575,7 +582,7 @@ figcaption {
 	}
 
 	#splash .jumbotron {
-		width: 60%;
+		width: 72.5%;
 	}
 
 	/* Sticky footer */
